<resources>
    <string name="app_name">Kurinder</string>
    <string name="login_via_phone">ВОЙТИ С ПОМОЩЬЮ НОМЕРА ТЕЛЕФОНА</string>
    <string name="privacy_police"><u>Политикой конфиденциальности</u></string>
    <string name="terms_of_service"><u>Условиями обслуживания</u> и</string>
    <string name="agreement_1">Осуществляя вход, вы</string>
    <string name="agreement_2">выражаете согласие с нашими</string>
    <string name="my_phone">Мой номер:</string>
    <string name="continue_str">Продолжить</string>
    <string name="phone_number">Тел. номер</string>
    <string name="plus">+</string>
    <string name="phone_error">Номер должен быть в формате +XXXXXXXXXXX</string>
    <string name="oops">Упс! Что-то пошло не так</string>
    <string name="success_send">Код успешно отправлен!</string>
    <string name="my_code">Мой код:</string>
    <string name="resend">ПОВТОРИТЬ ОТПРАВКУ</string>\
    <string name="code_error">Неправильный код</string>

    <string name="profile_name_title">Мое имя:</string>
    <string name="profile_sex_title">Я:</string>
    <string name="profile_desc_title">О себе:</string>
    <string name="profile_birthdate_title">Я родился:</string>
    <string name="profile_avatar_title">Мое лучшее фото:</string>

    <string name="done">Завершить</string>
    <string name="your_name">Ваше имя</string>
    <string name="male">МУЖЧИНА</string>
    <string name="female">ЖЕНЩИНА</string>
    <string name="birthdate">Дата рождения</string>
    <string name="about_me">Расскажите о себе</string>
    <string name="field_empty">Поле не может быть пустым</string>
    <string name="load_avatar">Выберите пожалуйста аватар</string>
</resources>
