<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/phone_cl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_large">

        <TextView
            android:id="@+id/my_phone_tv"
            style="@style/LargeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/my_phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/phone_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_vertical_large"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLength="12"
            android:phoneNumber="true"
            android:text="@string/plus"
            app:layout_constraintTop_toBottomOf="@id/my_phone_tv" />

        <TextView
            android:id="@+id/submit_phone_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_vertical_large"
            android:background="@drawable/border_radius_accent"
            android:foreground="?selectableItemBackground"
            android:gravity="center"
            android:paddingTop="@dimen/padding_vertical_medium"
            android:paddingBottom="@dimen/padding_vertical_medium"
            android:text="@string/continue_str"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/phone_et" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.github.ybq.android.spinkit.SpinKitView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/phone_load_anim"
        style="@style/SpinKitView.Large.Circle"
        app:SpinKit_Color="@color/colorAccent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:visibility="gone" />
</RelativeLayout>